# ToyLib_Sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ToyLib_Sample/: main.cpp
ToyLib_Sample.xcodeproj/: project.pbxproj
ToyLib_Sample.xcodeproj/project.xcworkspace/xcuserdata/daisuke.xcuserdatad/: UserInterfaceState.xcuserstate
ToyLib_Sample.xcodeproj/xcshareddata/xcschemes/: ToyLib_Sample.xcscheme
ToyLib_Sample.xcodeproj/xcuserdata/daisuke.xcuserdatad/xcschemes/: xcschememanagement.plist
ToyLib_Sample/Assets/: Campfire.fbx  Enemy_EyeDrone.gltf  brick.x  campfile.x  ground.x  ground2.x  house.lwo  house.x  sks.x  stan.gltf  tower.x
ToyLib_Sample/GameApp/: HeroActor.cpp  HeroActor.h  SingleInstance.cpp  SingleInstance.h  game.cpp  game.h  main.cpp
ToyLib_Sample/Settings/: HeroActor.json  Renderer_Settings.json  Renderer_Settings_1.json
ToyLib_Sample/ToyCore/Shaders/: Skinned.vert  Skinned_back.vert  SolidColor.frag
ToyLib_Sample/ToyCore/include/: Actor.h  Application.h  BillboardComponent.h  Bone.h  CameraComponent.h  ColliderComponent.h  Font.h  InputSystem.h  MoveComponent.h  ParticleComponent.h  PhysWorld.h  Renderer.h  SingleInstance.h  SkeletalMeshComponent.h  Texture.h
ToyLib_Sample/ToyCore/src/: Actor.cpp  Application.cpp  BillboardComponent.cpp  BoundingVolumeComponent.cpp  CameraComponent.cpp  ColliderComponent.cpp  DebuggerComponent.cpp  FollowCamera.cpp  InputSystem.cpp  MathUtils.cpp  Mesh.cpp  MeshComponent.cpp  MoveComponent.cpp  Renderer.cpp  SingleInstance.cpp  SpriteComponent.cpp  Texture.cpp  VertexArray.cpp
ToyLib_Sample/ToyLibCore/Shaders/: BasicMesh.frag  BasicMesh.vert  Billboard.frag  FogFront.frag  Particle.frag  Phong.frag  Phong.vert  RainFront.frag  RainScreen.vert  ShadowDebug.frag  ShadowDebug.vert  ShadowMapping.frag  ShadowMapping.vert  ShadowMapping_Mesh.vert  ShadowMapping_Skinned.vert  Skinned.vert  Toon.frag  WeatherDome.frag  WeatherScreen.frag  Weather_Clear.frag  Weather_Clear.vert
ToyLib_Sample/ToyLibCore/include/: Actor.h  AnimationClip.h  AnimationPlayer.h  Application.h  ApplicationEntry.h  AssetManager.h  BillboardComponent.h  BoundingVolumeComponent.h  ColliderComponent.h  Component.h  DirMoveComponent.h  EditorApplication.h  FPSMoveComponent.h  FollowCamera.h  FollowCameraComponent.h  FollowMoveComponent.h  GravityComponent.h  IMEUtil.h  InputSystem.h  IntertiaMoveComponent.h  JsonHelper.h  LaserColliderComponent.h  LightingManager.h  Material.h  MathUtils.h  Mesh.h  MeshComponent.h  MoveComponent.h  Music.h  OrbitCamera.h  OrbitCameraComponent.h  OrbitMoveComponent.h  ParticleComponent.h  PhysWorld.h  Polygon.h  Renderer.h  Shader.h  ShadowSpriteComponent.h  SkeletalMeshComponent.h  SkyDomeComponent.h  (+14 more)
ToyLib_Sample/ToyLibCore/src/: Actor.cpp  AnimationPlayer.cpp  Application.cpp  AssetManager.cpp  BillboardComponent.cpp  BoundingVolumeComponent.cpp  CameraComponent.cpp  ColliderComponent.cpp  Component.cpp  DebuggerComponent.cpp  DirMoveComponent.cpp  EditorApplication.cpp  FPSMoveComponent.cpp  FollowCamera.cpp  FollowCameraComponent.cpp  FollowMoveComponent.cpp  GravityComponent.cpp  IMEUtil.cpp  InertiaMoveComponent.cpp  InputSystem.cpp  JsonHelper.cpp  LaserColliderComponent.cpp  LightingManager.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  MoveComponent.cpp  Music.cpp  OrbitCamera.cpp  OrbitCameraComponent.cpp  OrbitMoveComponent.cpp  ParticleComponent.cpp  PhysWorld.cpp  Renderer.cpp  Renderer_Setting.cpp  Shader.cpp  ShadowSpriteComponent.cpp  SingleInstance.cpp  SkeletalMeshComponent.cpp  SkyDomeComponent.cpp  (+14 more)
doc/vscode_templates/: c_cpp_properties.json  launch.json  tasks.json
docs/cmake_templates/: CMakeLists.txt
docs/vscode_templates/Linux_Mac_Windows/: c_cpp_properties.json  launch.json  tasks.json
docs/vscode_templates/Windows/: c_cpp_properties.json  launch.json  settings.json  tasks.json
